--- a/scripts/quick-run/merge-devnets/docker-compose.lighthouse.yml
+++ b/scripts/quick-run/merge-devnets/docker-compose.lighthouse.yml
@@ -14,3 +14,5 @@ services:
       --execution-endpoints=http://127.0.0.1:8545 --terminal-total-difficulty-override=$TOTAL_TERMINAL_DIFFICULTY
       --metrics
     network_mode: host
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
